--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongodb": "~1.4.15",
     "mongoose": "*",
     "morgan": "~1.6.1",
-    "multer": "~0.1.6",
+    "multer": "^1.1.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
