--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "connect-flash": "~0.1.1",
     "connect-mongo": "~0.4.1",
     "cookie-parser": "~1.3.5",
-    "cool-ascii-faces": "1.3.4",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "~1.9.1",
-    "generic-pool": "*",
-    "markdown": "~0.5.0",
+    "getmac": "^1.2.1",
+    "highlight.js": "^9.4.0",
+    "markdown-it": "^6.0.2",
     "mongodb": "~1.4.15",
     "mongoose": "*",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "needle": "^1.0.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
